--- a/admin.html
+++ b/admin.html
@@ -39,6 +39,16 @@
                     <label for="productName">Nombre del Producto *</label>
                     <input type="text" id="productName">
                 </div>
+
+                <div class="form-group">
+                    <label for="productCategory">Categoría *</label>
+                    <select id="productCategory" required>
+                        <option value="">Selecciona una categoria</option>
+                        <option value="Velas de navidad">Velas de navidad</option>
+                        <option value="Velas de halloween">Velas de halloween</option>
+                    </select>
+                    <small>Seleccione la categoría correspondiente al producto.</small>
+                </div>
                 
                 <div class="form-group">
                     <label for="productPrice">Precio *</label>
@@ -93,135 +103,7 @@
             </div>
         </div>
     </footer>
-
     <script src="script/products.js"></script>
-    <script>
-        let editingProductId = null;
-
-        // Cargar productos al iniciar
-        displayAdminProducts();
-
-        // Preview de imagen
-        document.getElementById('productImage').addEventListener('change', function(e) {
-            const file = e.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = function(event) {
-                    const preview = document.getElementById('imagePreview');
-                    preview.innerHTML = `<img src="${event.target.result}" alt="Preview">`;
-                };
-                reader.readAsDataURL(file);
-            }
-        });
-
-        // Manejar envío del formulario
-        document.getElementById('productForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            saveProduct();
-        });
-
-        function saveProduct() {
-            const nameElement = document.getElementById('productName');
-            const priceElement = document.getElementById('productPrice');
-            const linkElement = document.getElementById('productLink');
-            const imageElement = document.getElementById('productImage');
-            const productIdElement = document.getElementById('productId');
-
-            if (!nameElement || !priceElement || !linkElement || !imageElement || !productIdElement) {
-                console.error('Uno o más elementos del formulario no se encontraron');
-                return;
-            }
-
-            const name = nameElement.value;
-            const price = priceElement.value;
-            const link = linkElement.value;
-            const imageFile = imageElement.files[0];
-            const productId = productIdElement.value || null;
-
-            // Validaciones
-            if (!name || !price || !link) {
-                alert('Por favor completa todos los campos obligatorios');
-                return;
-            }
-
-            // Si estamos editando y no hay nueva imagen, mantener la anterior
-            if (editingProductId && !imageFile) {
-                const products = getProducts();
-                const existingProduct = products.find(p => p.id === editingProductId);
-                const product = {
-                    id: editingProductId,
-                    name: name,
-                    price: price,
-                    image: existingProduct.image,
-                    link: link
-                };
-                updateProduct(editingProductId, product);
-                resetForm();
-                displayAdminProducts();
-                return;
-            }
-
-            // Si hay nueva imagen
-            if (imageFile) {
-                const reader = new FileReader();
-                reader.onload = function(event) {
-                    const product = {
-                        id: editingProductId || Date.now().toString(),
-                        name: name,
-                        price: price,
-                        image: event.target.result,
-                        link: link
-                    };
-
-                    if (editingProductId) {
-                        updateProduct(editingProductId, product);
-                    } else {
-                        addProduct(product);
-                    }
-
-                    resetForm();
-                    displayAdminProducts();
-                };
-                reader.readAsDataURL(imageFile);
-            } else if (!editingProductId) {
-                alert('Por favor selecciona una imagen para el producto');
-            }
-        }
-
-        function editProduct(id) {
-            const products = getProducts();
-            const product = products.find(p => p.id === id);
-            
-            if (product) {
-                editingProductId = id;
-                document.getElementById('productId').value = id;
-                document.getElementById('productName').value = product.name;
-                document.getElementById('productPrice').value = product.price;
-                document.getElementById('productLink').value = product.link;
-                document.getElementById('imagePreview').innerHTML = `<img src="${product.image}" alt="Preview">`;
-                document.getElementById('formTitle').textContent = 'Editar Producto';
-                document.querySelector('.admin-form-container').scrollIntoView({ behavior: 'smooth' });
-            }
-        }
-
-        function confirmDelete(id) {
-            if (confirm('¿Estás seguro de que deseas eliminar este producto?')) {
-                deleteProduct(id);
-                displayAdminProducts();
-            }
-        }
-
-        function cancelEdit() {
-            resetForm();
-        }
-
-        function resetForm() {
-            editingProductId = null;
-            document.getElementById('productForm').reset();
-            document.getElementById('productId').value = '';
-            document.getElementById('imagePreview').innerHTML = '';
-            document.getElementById('formTitle').textContent = 'Agregar Nuevo Producto';
-        }
-    </script>
+    <script src="script/admin.js"></script>
 </body>
 </html>
