--- a/admin.html
+++ b/admin.html
@@ -61,11 +61,19 @@
                     <input type="text" id="productPrice" required placeholder="15.00">
                 </div>
 
-                <div class="form-group">
-                    <label for="productImage">Imagen del Producto *</label>
-                    <input type="file" id="productImage" accept="image/*" multiple>
-                    <small>Formatos aceptados: JPG, PNG, GIF Puedes subir hasta 3 imágenes (colores)</small>
-                    <div id="imagePreview" class="image-preview"></div>
+                <div class=""form-group>
+                    <label>Imagenes del producto (Cloudonary)</label>
+
+                    <input type="url" id="productImage1" required placeholder="URL imagen color 1">
+
+                    <input type="url" id="productImage2" required placeholder="URL imagen color 2">
+
+                    <input type="url" id="productImage3" required placeholder="URL imagen color 3">
+
+                    <small> 
+                        Pega las URLs de Cloudinary. Máximo 3 imágenes (colores).
+                    </small>
+                    
                 </div>
 
                 <div class="form-group">
