--- a/admin.html
+++ b/admin.html
@@ -33,6 +33,7 @@
             </div>
         </nav>
     </header>
+
     <section class="admin-section">
         <h2>Panel de Administración</h2>
 
@@ -61,19 +62,12 @@
                     <input type="text" id="productPrice" required placeholder="15.00">
                 </div>
 
-                <div class=""form-group>
-                    <label>Imagenes del producto (Cloudonary)</label>
-
+                <div class="form-group">
+                    <label>Imágenes del producto (Cloudinary)</label>
                     <input type="url" id="productImage1" required placeholder="URL imagen color 1">
-
-                    <input type="url" id="productImage2" required placeholder="URL imagen color 2">
-
-                    <input type="url" id="productImage3" required placeholder="URL imagen color 3">
-
-                    <small> 
-                        Pega las URLs de Cloudinary. Máximo 3 imágenes (colores).
-                    </small>
-                    
+                    <input type="url" id="productImage2" placeholder="URL imagen color 2">
+                    <input type="url" id="productImage3" placeholder="URL imagen color 3">
+                    <small>Pega las URLs de Cloudinary. Máximo 3 imágenes (colores).</small>
                 </div>
 
                 <div class="form-group">
@@ -101,12 +95,11 @@
         </div>
     </section>
 
-    <!-- ==========================
-         SCRIPTS
-         ========================== -->
     <script src="script/auth.js"></script>
-    <script src="script/products.js"></script>
-    <script src="script/admin.js"></script>
+
+    <script type="module">
+        import "./script/admin.js";
+    </script>
 
     <script>
         // Proteger página
@@ -132,6 +125,5 @@
             }
         }, 60000);
     </script>
-
 </body>
 </html>
