--- a/admin.html
+++ b/admin.html
@@ -223,7 +223,7 @@
 
                 <div class="form-group">
                     <label for="productLink">Enlace de Compra (WhatsApp) *</label>
-                    <input type="url" id="productLink" required placeholder="https://wa.me/...">
+                    <input type="url" id="productLink" readonly value="https://wa.me/+593980467248" required>
                 </div>
 
                 <div class="form-buttons">
